@@ -78,7 +78,7 @@ public class BalanceAndTorqueSimSharing {
     public static enum ParameterKeys implements IParameterKey {
         massValue, distanceFromPlankCenter, plankTiltAngle, massUserComponent,
         pointsEarned, massValueShown, proposedAnswer, correctAnswer,
-        plankTiltState
+        plankTiltState, challengeNumber
     }
 
     public static Format MASS_VALUE_FORMATTER = new DefaultDecimalFormat( "0.0#" );
